<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:myapp="http://schemas.android.com/apk/res-auto"
    android:key="motion_detect_setting"
    android:title="@string/setting_title">
    <PreferenceCategory 
        android:title="@string/user_setting">
        <EditTextPreference 
            android:key="user_phone_number"
            android:title="@string/user_phone_number"/>
    </PreferenceCategory>
    <PreferenceCategory 
        android:title="@string/system_setting">
        <EditTextPreference 
            android:key="camera_name"
            android:title="@string/camera_name"
            android:defaultValue="MotionDetectCamera"/>
        <ListPreference 
            android:key="camera_id"
            android:entries="@array/cameras"
            android:entryValues="@array/camera_values"
            android:title="@string/camera_select"
            android:defaultValue="0"/>
         <com.doantotnghiep.motiondetector.SeekBarPreference
            android:key="motiondetect_threshold"
            android:title="@string/motiondetect_threshold"
            myapp:setMax="100"
            myapp:defaultValue="20"
            myapp:unit="%"/>
        <ListPreference 
            android:key="motiondetect_alarm_method"
            android:entries="@array/alarm_methods"
            android:entryValues="@array/alarm_method_values"
            android:title="@string/motiondetect_alarm_method_select"
            android:defaultValue="2"/>
        <CheckBoxPreference 
            android:key="enable_haarcascade_detect"
            android:title="@string/enable_detect"
            android:defaultValue="false"/>
        <com.doantotnghiep.motiondetector.SeekBarPreference
            android:key="haarcascade_detect_threshold"
            android:title="@string/detect_threshold"
            android:dependency="enable_haarcascade_detect"
            myapp:setMax="100"
            myapp:unit="%"
            myapp:defaultValue="30"/>
        <ListPreference 
            android:key="haarcascade_detect_alarm_method"
            android:entries="@array/alarm_methods"
            android:entryValues="@array/alarm_method_values"
            android:title="@string/detect_alarm_method_select"
            android:dependency="enable_haarcascade_detect"
            android:defaultValue="2"
            />
    </PreferenceCategory>
    <PreferenceCategory 
        android:title="@string/bgs_setting">
        <ListPreference
            android:key="bgs_method"
            android:entries="@array/bgs_methods"
            android:title="@string/bgs_method"
            android:entryValues="@array/bgs_method_values"
            android:defaultValue="0"/>
        <CheckBoxPreference
            android:key="enable_threshold"
            android:title="@string/enable_threshold"
            android:defaultValue="true"/>
        <com.doantotnghiep.motiondetector.SeekBarPreference
            android:key="bgs_threshold"
            android:dependency="enable_threshold"
            myapp:setMax="255"
            myapp:defaultValue="30"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/detect_setting"
        android:dependency="enable_haarcascade_detect">
        <ListPreference
            android:key="haarcascade_set"
            android:entries="@array/detect_methods"
            android:title="@string/detect_method"
            android:entryValues="@array/detect_method_values"
            android:dependency="enable_haarcascade_detect"
            android:defaultValue="0"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/alarm_setting">
        <ListPreference
            android:key="alarm_sound"
            android:title="@string/alarm_sound"
            android:entries="@array/alarm_sounds"
            android:entryValues="@array/alarm_sound_values"
            android:defaultValue="0"/>
        <ListPreference 
            android:key="sms_time_interval"
            android:title="@string/sms_time_interval"
            android:entries="@array/sms_time_intervals"
            android:entryValues="@array/sms_time_interval_values"
            android:defaultValue="5"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/storage_setting">
        <ListPreference 
            android:key="image_storage_time_interval"
            android:title="@string/image_storage_time_interval"
            android:entries="@array/image_storage_time_intervals"
            android:entryValues="@array/image_storage_time_interval_values"
            android:defaultValue="1"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/wowza_server_setting">
        <CheckBoxPreference
            android:key="wowza_stream_enable"
            android:title="@string/wowza_stream_enable"
            android:defaultValue="false"/>
        <EditTextPreference 
            android:key="wowza_server_add"
            android:title="@string/wowza_server_address"
            android:dependency="wowza_stream_enable"/>
        <EditTextPreference 
            android:key="wowza_server_port"
            android:title="@string/wowza_server_port"
            android:dependency="wowza_stream_enable"/>
        <EditTextPreference 
            android:key="wowza_server_app"
            android:title="@string/wowza_server_app_name"
            android:dependency="wowza_stream_enable"/>
        <EditTextPreference 
            android:key="wowza_server_app_username"
            android:title="@string/wowza_server_app_username"
            android:dependency="wowza_stream_enable"/>
        <EditTextPreference 
            android:key="wowza_server_app_pass"
            android:title="@string/wowza_server_app_password"
            android:dependency="wowza_stream_enable"/>
    </PreferenceCategory>
</PreferenceScreen>
